--- a/create-event-form-details-7/index.html
+++ b/create-event-form-details-7/index.html
@@ -5,10 +5,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Creation Form</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Karla", sans-serif;
+      }
+
+      /* Tab styling */
+      .tab-button {
+        color: #565656;
+        font-family: "Karla", sans-serif;
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 160%;
+        letter-spacing: 0.075px;
+        padding: 8px 16px;
+        border: none;
+        background: none;
+        cursor: pointer;
+        position: relative;
+        transition: color 0.3s ease;
+      }
+
+      .tab-button.active {
+        color: #000;
+      }
+
+      .tab-indicator {
+        height: 4px;
+        border-radius: 20px;
+        background: rgba(17, 216, 245, 0.3);
+        transition: background 0.3s ease;
+      }
+
+      .tab-indicator.active {
+        background: rgba(17, 216, 245, 0.7);
+      }
+
+      /* Mobile responsive styles */
+      @media (max-width: 768px) {
+        .form-container {
+          max-width: 100%;
+          margin: 16px;
+          padding: 20px;
+          min-height: calc(100vh - 32px);
+        }
+
+        .form-title {
+          font-size: 24px;
+          line-height: 1.2;
+        }
+
+        .tabs-container {
+          margin-bottom: 20px;
+        }
+
+        .tab-button {
+          font-size: 14px;
+          padding: 6px 12px;
+        }
+
+        .form-content {
+          gap: 20px;
+        }
+
+        .form-input,
+        .form-select,
+        .form-textarea {
+          padding: 12px 16px;
+          font-size: 16px;
+          border-radius: 8px;
+        }
+
+        .form-textarea {
+          min-height: 80px;
+          resize: vertical;
+        }
+
+        .next-button {
+          padding: 12px 20px;
+          font-size: 16px;
+          border-radius: 10px;
+          gap: 8px;
+        }
+      }
+    </style>
   </head>
   <body class="bg-white">
     <div
-      class="max-w-md mx-auto mt-10 bg-[#DCF9FE] rounded-lg shadow-md p-6 relative"
+      class="max-w-xl mx-auto mt-10 bg-[#DCF9FE] rounded-lg shadow-md p-6 relative"
     >
       <!-- Title and Close Button -->
       <div class="flex justify-between items-center mb-6">
@@ -17,98 +107,310 @@
       </div>
 
       <!-- Tabs -->
-      <div class="flex space-x-10 mb-6">
-        <button
-          class="pb-2 text-[#000000] font-semibold border-b-2 border-blue-500"
-        >
-          Details
-        </button>
-        <button
-          class="pb-2 text-[#565656] font-semibold border-[#9FEFFB] border-b-2"
-        >
-          Date & Location
-        </button>
-        <button
-          class="pb-2 text-[#565656] font-semibold border-[#9FEFFB] border-b-2"
-        >
-          Tickets
-        </button>
-      </div>
-
-      <!-- Form Fields -->
-      <form class="space-y-6">
-        <!-- Event Name -->
-        <div>
-          <label class="block text-sm font-medium mb-1">Event Name</label>
-          <input
-            type="text"
-            placeholder="Enter event name"
-            class="w-full border border-gray-300 rounded-md px-4 py-2"
-          />
-        </div>
-
-        <!-- Category -->
-        <div>
-          <label class="block text-sm font-medium mb-1">Category</label>
-          <select
-            class="w-full border border-gray-300 rounded-md px-4 py-2 appearance-none bg-white"
-          >
-            <option>Select a category</option>
-          </select>
-        </div>
-
-        <!-- Description -->
-        <div>
-          <label class="block text-sm font-medium mb-1">Description</label>
-          <textarea
-            placeholder="Type your event description here."
-            class="w-full border border-gray-300 rounded-md px-4 py-2 h-24"
-          ></textarea>
-        </div>
-
-        <!-- Event Image -->
-        <div>
-          <label class="block text-sm font-medium mb-1">Event Image</label>
-          <div class="bg-white p-3 rounded-[4px]">
-            <div
-              class="w-full border-2 border-dashed border-gray-300 rounded-md p-6 text-center"
-            >
-              <div class="flex justify-center">
-                <img
-                  src="./image/image-plus.svg"
-                  alt=""
-                  class="flex justify-center"
-                />
-              </div>
-              <!-- Folder icon approximation -->
-              <p class="font-semibold text-[#606060]">ADD AN EVENT IMAGE</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Next Button -->
-        <div class="flex justify-end">
+      <div
+        class="mb-6 tabs-container"
+        style="
+          display: flex;
+          width: 480px;
+          align-items: flex-start;
+          gap: 12px;
+          flex-direction: column;
+        "
+      >
+        <div class="flex" style="width: 100%; gap: 12px">
           <button
-            class="bg-[#7CEAFA] text-[#09090B] rounded-[12px] px-4 py-2 font-medium flex items-center gap-2"
+            class="tab-button active"
+            onclick="switchTab(0, this)"
+            style="flex: 1"
           >
-            Next
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path d="M5 12h14" />
-              <path d="m12 5 7 7-7 7" />
-            </svg>
+            Details
+          </button>
+          <button
+            class="tab-button"
+            onclick="switchTab(1, this)"
+            style="flex: 1"
+          >
+            Date & Location
+          </button>
+          <button
+            class="tab-button"
+            onclick="switchTab(2, this)"
+            style="flex: 1"
+          >
+            Tickets
           </button>
         </div>
-      </form>
+        <div class="flex" style="width: 100%; gap: 12px">
+          <div class="tab-indicator active" style="flex: 1"></div>
+          <div class="tab-indicator" style="flex: 1"></div>
+          <div class="tab-indicator" style="flex: 1"></div>
+        </div>
+      </div>
+
+      <!-- Tab Content -->
+      <div class="tab-content">
+        <!-- Details Tab Content -->
+        <div id="tab-0" class="tab-panel active">
+          <form class="space-y-6 form-content">
+            <!-- Event Name -->
+            <div>
+              <label class="block text-sm font-medium mb-1">Event Name</label>
+              <input
+                type="text"
+                placeholder="Enter event name"
+                class="w-full border border-gray-300 rounded-md px-4 py-2 form-input"
+              />
+            </div>
+
+            <!-- Category -->
+            <div>
+              <label class="block text-sm font-medium mb-1">Category</label>
+              <select
+                class="w-full border border-gray-300 rounded-md px-4 py-2 appearance-none bg-white form-select"
+              >
+                <option>Select a category</option>
+              </select>
+            </div>
+
+            <!-- Description -->
+            <div>
+              <label class="block text-sm font-medium mb-1">Description</label>
+              <textarea
+                placeholder="Type your event description here."
+                class="w-full border border-gray-300 rounded-md px-4 py-2 h-24 form-textarea"
+              ></textarea>
+            </div>
+
+            <!-- Event Image -->
+            <div>
+              <label class="block text-sm font-medium mb-1">Event Image</label>
+              <div class="bg-white p-3 rounded-[4px]">
+                <div
+                  class="w-full border-2 border-dashed border-gray-300 rounded-md p-6 text-center"
+                >
+                  <div class="flex justify-center">
+                    <img
+                      src="./image/image-plus.svg"
+                      alt=""
+                      class="flex justify-center"
+                    />
+                  </div>
+                  <!-- Folder icon approximation -->
+                  <p class="font-semibold text-[#606060]">ADD AN EVENT IMAGE</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Next Button -->
+            <div class="flex justify-end">
+              <button
+                type="button"
+                onclick="nextTab()"
+                class="bg-[#7CEAFA] text-[#09090B] rounded-[12px] px-4 py-2 font-medium flex items-center gap-2 next-button"
+              >
+                Next
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M5 12h14" />
+                  <path d="m12 5 7 7-7 7" />
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
+
+        <!-- Date & Location Tab Content -->
+        <div id="tab-1" class="tab-panel hidden">
+          <form class="space-y-6 form-content">
+            <div class="text-center py-12">
+              <h3 class="text-lg font-medium text-gray-600 mb-2">
+                Date & Location
+              </h3>
+              <p class="text-gray-500">
+                Configure your event date and location details here.
+              </p>
+            </div>
+
+            <!-- Navigation Buttons -->
+            <div class="flex justify-between">
+              <button
+                type="button"
+                onclick="prevTab()"
+                class="bg-gray-200 text-gray-700 rounded-[12px] px-4 py-2 font-medium flex items-center gap-2"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="m19 12-14 0" />
+                  <path d="m12 19-7-7 7-7" />
+                </svg>
+                Previous
+              </button>
+              <button
+                type="button"
+                onclick="nextTab()"
+                class="bg-[#7CEAFA] text-[#09090B] rounded-[12px] px-4 py-2 font-medium flex items-center gap-2 next-button"
+              >
+                Next
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M5 12h14" />
+                  <path d="m12 5 7 7-7 7" />
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
+
+        <!-- Tickets Tab Content -->
+        <div id="tab-2" class="tab-panel hidden">
+          <form class="space-y-6 form-content">
+            <div class="text-center py-12">
+              <h3 class="text-lg font-medium text-gray-600 mb-2">Tickets</h3>
+              <p class="text-gray-500">
+                Set up your event tickets and pricing here.
+              </p>
+            </div>
+
+            <!-- Navigation Buttons -->
+            <div class="flex justify-between">
+              <button
+                type="button"
+                onclick="prevTab()"
+                class="bg-gray-200 text-gray-700 rounded-[12px] px-4 py-2 font-medium flex items-center gap-2"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="m19 12-14 0" />
+                  <path d="m12 19-7-7 7-7" />
+                </svg>
+                Previous
+              </button>
+              <button
+                type="button"
+                class="bg-[#7CEAFA] text-[#09090B] rounded-[12px] px-4 py-2 font-medium flex items-center gap-2 next-button"
+              >
+                Create Event
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M5 12h14" />
+                  <path d="m12 5 7 7-7 7" />
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
+
+    <script>
+      let currentTab = 0;
+      const totalTabs = 3;
+
+      function switchTab(tabIndex, buttonElement) {
+        // Hide all tab panels
+        for (let i = 0; i < totalTabs; i++) {
+          const panel = document.getElementById(`tab-${i}`);
+          if (panel) {
+            panel.classList.add("hidden");
+            panel.classList.remove("active");
+          }
+        }
+
+        // Remove active class from all tab buttons and indicators
+        const tabButtons = document.querySelectorAll(".tab-button");
+        const tabIndicators = document.querySelectorAll(".tab-indicator");
+
+        tabButtons.forEach((btn) => btn.classList.remove("active"));
+        tabIndicators.forEach((indicator) =>
+          indicator.classList.remove("active")
+        );
+
+        // Show selected tab panel
+        const selectedPanel = document.getElementById(`tab-${tabIndex}`);
+        if (selectedPanel) {
+          selectedPanel.classList.remove("hidden");
+          selectedPanel.classList.add("active");
+        }
+
+        // Add active class to selected button and indicator
+        buttonElement.classList.add("active");
+        if (tabIndicators[tabIndex]) {
+          tabIndicators[tabIndex].classList.add("active");
+        }
+
+        currentTab = tabIndex;
+      }
+
+      function nextTab() {
+        if (currentTab < totalTabs - 1) {
+          const nextTabIndex = currentTab + 1;
+          const nextButton =
+            document.querySelectorAll(".tab-button")[nextTabIndex];
+          switchTab(nextTabIndex, nextButton);
+        }
+      }
+
+      function prevTab() {
+        if (currentTab > 0) {
+          const prevTabIndex = currentTab - 1;
+          const prevButton =
+            document.querySelectorAll(".tab-button")[prevTabIndex];
+          switchTab(prevTabIndex, prevButton);
+        }
+      }
+
+      // Initialize first tab as active
+      document.addEventListener("DOMContentLoaded", function () {
+        const firstButton = document.querySelector(".tab-button");
+        if (firstButton) {
+          switchTab(0, firstButton);
+        }
+      });
+    </script>
   </body>
 </html>
